--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.3.1",
     "use-local-storage-state": "^18.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
